update login/register user

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=batteryswap
 
 # PostgreSQL datasource (Railway)
-spring.datasource.url=jdbc:postgresql://gondola.proxy.rlwy.net:50621/railway
+spring.datasource.url=jdbc:postgresql://trolley.proxy.rlwy.net:55645/railway
 spring.datasource.username=postgres
-spring.datasource.password=pgXejhiSvDwGODnaZyEnbOAoPhRtaLib
+spring.datasource.password=ZiwFtSrFbipHNvaALjMSzXlUTGIqDukh
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.hikari.maximum-pool-size=10
 
@@ -16,9 +16,25 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
 spring.boot.run.jvmArguments=-Duser.timezone=Asia/Ho_Chi_Minh
 
-
-# Timezone cho JSON (Spring MVC / Jackson)
+# Timezone cho JSON
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
-# Server port (Railway s? inject PORT, local thì ch?y 8080)
+# Server port
 server.port=${PORT:8080}
+
+# JWT config
+jwt.secret=motconvitxoerahaicaicanhnokeurangcapcapcapcapcapcap
+jwt.expiration=3600000  
+
+# Swagger OpenAPI path
+springdoc.swagger-ui.path=/
+springdoc.api-docs.enabled=true
+springdoc.swagger-ui.enabled=true
+springdoc.swagger-ui.tryItOutEnabled=true
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.displayRequestDuration=true
+springdoc.swagger-ui.filter=true
+
+# Fix generated server URL ?? Swagger không t? pick http
+springdoc.api-docs.groups.enabled=true
+springdoc.override-with-generic-response=true
