--- a/fe/.env
+++ b/fe/.env
@@ -1,1 +1,1 @@
-VITE_API_BASE_URL=https://batteryswap-be-production.up.railway.app
+VITE_API_BASE_URL="https://batteryswap-be-production.up.railway.app"
