--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Bỏ qua thư mục node_modules ở cả frontend và backend
-frontend/node_modules/
-backend/node_modules/
+fe/node_modules/
+be/node_modules/
 # Bỏ qua thư mục build/dist ở cả frontend và backend
-frontend/build/
-frontend/dist/
-backend/build/
-backend/dist/
+fe/build/
+fe/dist/
+be/build/
+be/dist/
 # Bỏ qua file môi trường
-frontend/.env
-backend/.env
+fe/.env
+be/.env
 # Bỏ qua các file log
 *.log
 # Bỏ qua các file hệ thống
