--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=batteryswap
 
 # PostgreSQL datasource (Railway)
-spring.datasource.url=jdbc:postgresql://trolley.proxy.rlwy.net:55645/railway
+spring.datasource.url=jdbc:postgresql://trolley.proxy.rlwy.net:55645/railway?serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=postgres
 spring.datasource.password=ZiwFtSrFbipHNvaALjMSzXlUTGIqDukh
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,11 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/currentDB.sql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.time_zone=Asia/Ho_Chi_Minh
-spring.boot.run.jvmArguments=-Duser.timezone=Asia/Ho_Chi_Minh
-
-# Timezone cho JSON
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 # Server port
@@ -35,6 +32,6 @@ springdoc.swagger-ui.operationsSorter=method
 springdoc.swagger-ui.displayRequestDuration=true
 springdoc.swagger-ui.filter=true
 
-# Fix generated server URL ?? Swagger không t? pick http
+# Fix generated server URL ?? Swagger kh?ng t? pick http
 springdoc.api-docs.groups.enabled=true
 springdoc.override-with-generic-response=true
