--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -19,9 +19,6 @@ spring.jackson.time-zone=Asia/Ho_Chi_Minh
 # Server port
 server.port=${PORT:8080}
 
-# JWT config
-jwt.secret=motconvitxoerahaicaicanhnokeurangcapcapcapcapcapcap
-jwt.expiration=3600000  
 
 # Swagger OpenAPI path
 springdoc.swagger-ui.path=/
@@ -35,3 +32,25 @@ springdoc.swagger-ui.filter=true
 # Fix generated server URL ?? Swagger kh?ng t? pick http
 springdoc.api-docs.groups.enabled=true
 springdoc.override-with-generic-response=true
+
+#  EMAIL (SendGrid)
+sendgrid.api.key=${SENDGRID_API_KEY}
+spring.mail.from=${SPRING_MAIL_FROM}
+
+
+#  JWT CONFIG
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
+
+# JWT RESEND TOKEN (email verify)
+jwt.resend.secret=${JWT_RESEND_SECRET}
+jwt.resend.expiration=${JWT_RESEND_EXPIRATION}
+
+# ? FRONTEND URL
+app.frontend.verify-url=${APP_FRONTEND_VERIFY_URL}
+
+
+
+
+
+
