cap nhat api booking

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=batteryswap
 
 # PostgreSQL datasource (Railway)
-spring.datasource.url=jdbc:postgresql://trolley.proxy.rlwy.net:55645/railway
+spring.datasource.url=jdbc:postgresql://trolley.proxy.rlwy.net:55645/railway?serverTimezone=Asia/Ho_Chi_Minh
 spring.datasource.username=postgres
 spring.datasource.password=ZiwFtSrFbipHNvaALjMSzXlUTGIqDukh
 spring.datasource.driver-class-name=org.postgresql.Driver
@@ -12,8 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/currentDB.sql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
 
 # Server port
