Cap nhat api Booking + Payment

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -45,8 +45,20 @@ jwt.resend.expiration=${JWT_RESEND_EXPIRATION}
 # ? FRONTEND URL
 app.frontend.verify-url=${APP_FRONTEND_VERIFY_URL}
 
+# ==== VNPAY SANDBOX ====
+vnpay.tmn-code=0DQ80NKJ
+vnpay.hash-secret=4L82126G7PIJ5KN7MOVETI13P3W23RUX
+vnpay.pay-url=https://sandbox.vnpayment.vn/paymentv2/vpcpay.html
+vnpay.api-version=2.1.0
+vnpay.command=pay
+vnpay.curr-code=VND
+vnpay.locale=vn
+vnpay.timezone=Asia/Ho_Chi_Minh
+vnpay.expire-minutes=15
 
 
-
-
+# FE: http://localhost:5173/payment-result
+vnpay.return-url=${VNPAY_RETURN_URL}
+vnpay.ipn-url=${VNPAY_IPN_URL}
+# local dev IPN: dùng ngrok/cpolar ?? có HTTPS public r?i thay vào trên.
 
