Cap nhat api Booking

--- a/be/src/main/resources/application.properties
+++ b/be/src/main/resources/application.properties
@@ -15,6 +15,10 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.javax.persistence.schema-generation.scripts.create-target=src/main/resources/currentDB.sql
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jackson.time-zone=Asia/Ho_Chi_Minh
+spring.jpa.properties.hibernate.generate_statistics=true
+logging.level.org.hibernate.stat=DEBUG
+logging.level.org.hibernate.SQL_SLOW=DEBUG
+spring.jpa.properties.hibernate.session.events.log.LOG_QUERIES_SLOWER_THAN_MS=500
 
 # Server port
 server.port=${PORT:8080}
@@ -60,5 +64,6 @@ vnpay.expire-minutes=15
 # FE: http://localhost:5173/payment-result
 vnpay.return-url=${VNPAY_RETURN_URL}
 vnpay.ipn-url=${VNPAY_IPN_URL}
-# local dev IPN: dùng ngrok/cpolar ?? có HTTPS public r?i thay vào trên.
+
+
 
