--- a/be/pom.xml
+++ b/be/pom.xml
@@ -53,6 +53,12 @@
         </dependency>
 
 
+        <!-- Apache POI for Excel export -->
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.2.5</version>
+        </dependency>
 
         <!-- 🔑 Environment .env -->
         <dependency>
